# zephyr-trinamic

./: .gitignore  CMakeLists.txt  Kconfig  README.md  clear-west.sh  west.yml  zephyr-trinamic.code-workspace
application-tmc/: CMakeLists.txt  prj.conf
application-tmc-uart/: CMakeLists.txt  prj.conf
application-tmc-uart/boards/: nucleo_f103rb.overlay
application-tmc-uart/src/: main.c
application-tmc/boards/: nucleo_f103rb.overlay
application-tmc/src/: main.c
boards/arm/: printhat2.dts
boards/arm/printhat1/: Kconfig.board  Kconfig.defconfig  printhat1.dts
boards/arm/printhat2/: Kconfig.board  Kconfig.defconfig  printhat2.dts  printhat2_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/tmc/: CMakeLists.txt  tmc.c  tmc.h  tmc_shell.c  tmc_shell.h  tmc_spi.c  tmc_spi.h  tmc_uart.c  tmc_uart.h
drivers/tmc2130/: CMakeLists.txt  Kconfig
drivers/tmc2130/src/: tmc2130.c  tmc2130.h  tmc2130_map.c
drivers/tmc2209/: CMakeLists.txt  Kconfig
drivers/tmc2209/src/: tmc2209.c  tmc2209.h  tmc2209_fields.h  tmc2209_map.c
drivers/tmc5160/: CMakeLists.txt  Kconfig  tmc5160-spi.conf  tmc5160-uart.conf  tmc5160.conf
drivers/tmc5160/dts/bindings/: trinamic,tmc5160-uart.yaml  trinamic,tmc5160.yaml
drivers/tmc5160/src/: tmc5160.c  tmc5160.h  tmc5160_cmd.c  tmc5160_fields.h  tmc5160_map.c  tmc5160_reg.h  tmc5160_shell.c  tmc5160_spi.c  tmc5160_spi.h  tmc5160_uart.c  tmc5160_uart.h
drivers/tmc5160/zephyr/: module.yml
drivers/zephyr/: module.yml
dts/bindings/: trinamic,tmc.yml  trinamic,tmc2130-spi.yml  trinamic,tmc2209-uart.yml  trinamic,tmc5160-spi.yaml  trinamic,tmc5160-spi.yml  trinamic,tmc5160-uart.yml
manifest/: west.yml
manifest-devel/: west.yml
samples/application/: CMakeLists.txt  prj.conf
samples/application/boards/: nucleo_f446ze.overlay
samples/application/src/: com.c  com.h  common.h  led.c  led.h  main.c  sens.c  sens.h  shell.c
samples/printhat1/: CMakeLists.txt  prj.conf
samples/printhat1/src/: main.c
samples/printhat2/: CMakeLists.txt  prj.conf
samples/printhat2/src/: main.c
samples/single-wire-irq/: CMakeLists.txt
samples/single-wire-irq/boards/: nucleo_f103rb.overlay
samples/single-wire-irq/src/: main.c
samples/single-wire/src/: main.c
samples/tmc-spi/: CMakeLists.txt  prj.conf
samples/tmc-spi-sd/: CMakeLists.txt  prj.conf
samples/tmc-spi-sd/boards/: nucleo_f103rb.overlay
samples/tmc-spi-sd/src/: main.c
samples/tmc-spi/boards/: nucleo_f103rb.overlay
samples/tmc-spi/src/: main.c
samples/tmc-uart/: CMakeLists.txt  prj.conf
samples/tmc-uart-dma/: CMakeLists.txt
samples/tmc-uart-dma/boards/: nucleo_f103rb.overlay
samples/tmc-uart/boards/: nucleo_f103rb.overlay
samples/tmc-uart/src/: main.c
zephyr/: module.yml
